--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-* {
+ * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
@@ -7,36 +7,35 @@
 body {
     background-color: #d9dcd6;
 }
-
-.header {
+/*Changed .header from class selector to element selector*/
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
-
-.header h1 {
+/*Changed .header from class selector to element selector*/
+header h1 {
     display: inline-block;
     font-size: 48px;
-}
-
-.header h1 .seo {
     color: #d9dcd6;
 }
 
-.header div {
+/*Changed .header from class selector to element selector*/
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
-
-.header div ul {
+/* deleted unnecessary section
+header nav ul 
     list-style-type: none;
-}
+*/
 
-.header div ul li {
+/*Changed .header from class selector to element selector*/
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -90,6 +89,7 @@ p {
     margin-bottom: 32px;
     color: #ffffff;
 }
+
 
 .benefit-brand {
     margin-bottom: 32px;
